# assist

./: .deploy.env.example  .dev.env.example  .gitignore  2026-04-06-large-diff-handling.md  2026-04-07-implement-diff-truncation.md  2026-04-08-background-task-queue-plan.md  2026-04-08-background-tasks-and-thread-rendering.md  2026-04-08-implement-background-tasks-and-thread-rendering.md  2026-04-08-integration-background-tasks-progress-tracker.md  2026-04-08-integration-plan-approved.md  2026-04-08-integration-plan.md  2026-04-08-test-edge-cases-background-tasks.md  2026-04-28-merge-status-webview.md  AGENTS.md  BaseException_example.py  CLAUDE.md  Makefile  README.md  README.org  README_verified.md  RECOVERY_SYSTEM.md  ROADMAP_TODO.org  analysis_report.md  basic_server_usage.org  capital_of_france_summary.txt  conftest.py  cron_scheduling_research.md  dev_notes.txt  final_cron_scheduling_report.md  final_glm_4.6v_flash_testing_report.org  finalized_glm_4.6v_flash_testing_report.org  general_agent.py  general_agent_test.py  glm_4.6v_flash_testing_report.org  llm-config.yml.example  project_index_test.py  pyproject.toml  pytest.ini  question.txt  requirements.txt  (+8 more)
assist/: __init__.py  agent.py  backends.py  background_recovery.py  background_recovery_backup.py  checkpoint_rollback.py  checkpointer.py  config_manager.py  context_rider.py  domain_manager.py  domain_mirror.py  env.py  eviction_saver.py  failure_recovery.py  model_manager.py  promptable.py  record_store.py  recovery.py  research_cleanup.py  retention.py  sandbox.py  sandbox_manager.py  spec.py  stream_chunks.py  thread.py  thread_manager.py  thread_queue.py  thread_scheduler.py  tools.py  ui_integration.py  ui_integration_backup.py
conversation_history/: 017fd005-b0ff-4028-b799-add70fe5680d.md  (+19 more)
(+485 files in other folders)
