[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assist"
version = "0.1.0"
dependencies = [
    "vgrep==0.1.4",
    "Jinja2==3.1.6",
    "typer",
    "pyyaml",
    "jsonschema",
    "mcp"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
