[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assist"
version = "0.1.0"
# Runtime deps: packages actually imported under assist/, manage/, edd/.
# Versions are NOT pinned here; requirements.txt is the lockfile that
# pins the full transitive closure for reproducible installs.
# Downstream consumers (eg. emacsos-server) can install with:
#   pip install -e /path/to/assist -c /path/to/assist/requirements.txt
# to pick up these deps while honouring assist's pinned versions.
dependencies = [
    "deepagents",
    "docker",
    "fastapi",
    "httpx",
    "Jinja2",
    "langchain",
    "langchain-core",
    "langchain-openai",
    # >=1.2: durability= kwarg on .stream() (Thread.stream_message) and the
    # langgraph.types.Overwrite chunk shape (assist.stream_chunks) require it.
    "langgraph>=1.2",
    "langgraph-checkpoint-sqlite",
    "loguru",
    "Markdown",
    "openai",
    "pydantic",
    "python-dotenv",
    "python-multipart",
    "requests",
    "uvicorn",
]

[project.scripts]
assist = "manage.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.14.2"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
